--- a/keepnote/Vim/airties specific/commands 2/wireless/page.html
+++ b/keepnote/Vim/airties specific/commands 2/wireless/page.html
@@ -157,6 +157,34 @@
 <br/>
 <span style="font-family: Calibri"><span style="font-size: 11pt">wl -i wl1 up </span></span><br/>
 <br/>
+<br/>
+<br/>
+</div><br/>
+<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
+<br/>
+<span style="font-family: Calibri"><span style="font-size: 11pt">wl -i wl1 txpwr 100 </span></span><br/>
+<br/>
+<span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
+<br/>
+<span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
+<br/>
+<span style="font-family: Calibri"><span style="font-size: 11pt">2*2 set etme </span></span><br/>
+<br/>
+<span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
+<br/>
+<span style="font-family: Calibri"><span style="font-size: 11pt">wl -i wl1 rxchain 2 </span></span><br/>
+<br/>
+<span style="font-family: Calibri"><span style="font-size: 11pt">wl -i wl1 txchain 2 </span></span><br/>
+<br/>
+<br/>
+</div><br/>
+<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">wl -i wl0 phycal_tempdelta 50 </span></span><br/>
+<br/>
+<span style="font-family: Calibri"><span style="font-size: 11pt">wl -i wl1 phycal_tempdelta 60 </span></span><br/>
+<br/>
+<span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
+<br/>
+<span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
 <span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
 <br/>
 </div><br/>
